@@ -1,6 +1,1 @@
 <?php
-
-  //This file cannot be called directly, only included.
-  if (str_replace(DIRECTORY_SEPARATOR, "/", __FILE__) == $_SERVER['SCRIPT_FILENAME']) {
-   exit;
-  }
