@@ -94,11 +94,11 @@ if (!$_student_) {
             if (isset($_GET['confirm'])) {
                 //The user specified himself the size of the test
                 if ($test -> options['user_configurable']) {
-                    //Get the size of the test, so that we can verify that the value specified is at most equal to it  
+                    //Get the size of the test, so that we can verify that the value specified is at most equal to it
                  $test -> getQuestions(); //This way the test's questions are populated, and we will be needing this information
                  $test -> options['random_pool'] && $test -> options['random_pool'] <= sizeof($test -> questions) ? $questionsNumber = $test -> options['random_pool'] : $questionsNumber = sizeof($test -> questions);
 
-                 //Assigning the 'user_configurable' value to the 'random_pool' option gives us a test instance with the appropriate number of questions 
+                 //Assigning the 'user_configurable' value to the 'random_pool' option gives us a test instance with the appropriate number of questions
                  if (is_numeric($_GET['user_configurable']) && $_GET['user_configurable'] <= $questionsNumber && $_GET['user_configurable'] > 0) {
                         $test -> options['random_pool'] = $_GET['user_configurable'];
                  } else if (!isset($_GET['user_configurable']) || !$_GET['user_configurable']) {
@@ -170,7 +170,7 @@ if (!$_student_) {
                 if ($testInstance -> completedTest['status'] == 'failed') {
                     $currentUser -> setSeenUnit($currentUnit, $currentLesson, 0);
                 } else {
-                    $currentUser -> setSeenUnit($currentUnit, $currentLesson, 1);
+                 $currentUser -> setSeenUnit($currentUnit, $currentLesson, 1);
                 }
                 eF_redirect("".basename($_SERVER['PHP_SELF'])."?view_unit=".$_GET['view_unit']);
             }
