@@ -1,7 +1,4 @@
 <?php
-if (isset($_GET['delay'])) {
-    sleep($_GET['delay']);
-}
 /**
 
 * Student main page
